# ChangeLog for net-misc/l7-protocols
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/l7-protocols/ChangeLog,v 1.21 2006/01/06 10:42:21 dragonheart Exp $

*l7-protocols-2005.12.16 (06 Jan 2006)

  06 Jan 2006; Daniel Black <dragonheart@gentoo.org>
  -l7-protocols-2005.07.17.ebuild, +l7-protocols-2005.12.16.ebuild:
  version bump, remove older version

  16 Sep 2005; Ciaran McCreesh <ciaranm@gentoo.org> ChangeLog:
  Converted to UTF-8, fixed encoding screwups

*l7-protocols-2005.09.12 (16 Sep 2005)

  16 Sep 2005; Daniel Black <dragonheart@gentoo.org>
  -l7-protocols-2005.08.10.ebuild, -l7-protocols-2005.08.24.ebuild,
  l7-protocols-2005.09.05.ebuild, +l7-protocols-2005.09.12.ebuild:
  bump as per bug #106009. thanks tomas charvat

*l7-protocols-2005.09.05 (06 Sep 2005)

  06 Sep 2005; Daniel Black <dragonheart@gentoo.org>
  +l7-protocols-2005.09.05.ebuild:
  version bump

*l7-protocols-2005.08.24 (28 Aug 2005)

  28 Aug 2005; Daniel Black <dragonheart@gentoo.org>
  -l7-protocols-2005.06.04.ebuild, -l7-protocols-2005.07.28.ebuild,
  +l7-protocols-2005.08.24.ebuild:
  version bump and old version cleanout

  24 Aug 2005; Diego Pettenò <flameeyes@gentoo.org>
  l7-protocols-2005.08.10.ebuild:
  FreeBSD fixes: cp -a -> cp -pPR; root:root -> root:0.

*l7-protocols-2005.08.10 (14 Aug 2005)

  14 Aug 2005; Daniel Black <dragonheart@gentoo.org>
  +l7-protocols-2005.08.10.ebuild:
  version bump

  30 Jul 2005; Daniel Black <dragonheart@gentoo.org>
  l7-protocols-2005.07.17.ebuild:
  ppc stable

*l7-protocols-2005.07.28 (30 Jul 2005)

  30 Jul 2005; Daniel Black <dragonheart@gentoo.org>
  -l7-protocols-2005.02.06.ebuild, -l7-protocols-2005.06.17.ebuild,
  l7-protocols-2005.07.17.ebuild, +l7-protocols-2005.07.28.ebuild:
  version bump. x86 stable to l7-protocols-2005.07.17, old version cleanout

*l7-protocols-2005.07.17 (28 Jul 2005)

  28 Jul 2005; Daniel Black <dragonheart@gentoo.org>