@@ -1,18 +1,54 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 eb87cd70974698d3d8616506a77699dd ChangeLog 4221
-MD5 d41f93d0fa74a54ab989fba3daf185ad files/digest-l7-protocols-2005.09.05 74
-MD5 eaa41d61e00224d03b96044e9c0037b7 files/digest-l7-protocols-2005.09.12 74
-MD5 bd49d2a203dc9464f5c6c20020d401b9 files/digest-l7-protocols-2005.12.16 74
+DIST l7-protocols-2005-09-05.tar.gz 85769 RMD160 3e39be5c5b90971647bc746af37185d1bd2d4981 SHA256 491cebf7aaf7d4abb972b79defe98cfb0221ae51c76f0034b19fd23ee7351c22 size 85769
+DIST l7-protocols-2005-09-12.tar.gz 85980 RMD160 f8a795b78be23331d601a42743640756218f66da SHA256 8bb2badec1b272fdedb2634fef50c8b81f25a857c2dd42385c23857d0de2f816 size 85980
+DIST l7-protocols-2005-12-16.tar.gz 88335 RMD160 739e09eb007840917d1118c56f2a59aa11c13805 SHA256 29b2cb700b0507fca7a4b368233690c84d6247184e6ae8d9c5eae4a4b04278ff size 88335
+DIST l7-protocols-2006-04-09.tar.gz 90208 RMD160 9d1e7f91380ce1a1721068e464f0349759305ef0 SHA256 20ee22422001dfc2d840c7118eeac5e21cd557a7719f2c46b4cbcee2e16f17e9 size 90208
+EBUILD l7-protocols-2005.09.05.ebuild 1496 RMD160 50aa51c696f21fe69dc624609407b6c378c1cdac SHA1 a6c25a5ff8ee0fe2b67715556250ab9a4caf688f SHA256 388648715232146f00cb3f1a57ea02cfa947bb8e4d7aa494c68405ae8071c43f size 1496
 MD5 06f4a1da1428b37ac7629a80b44e63eb l7-protocols-2005.09.05.ebuild 1496
+RMD160 50aa51c696f21fe69dc624609407b6c378c1cdac l7-protocols-2005.09.05.ebuild 1496
+SHA256 388648715232146f00cb3f1a57ea02cfa947bb8e4d7aa494c68405ae8071c43f l7-protocols-2005.09.05.ebuild 1496
+EBUILD l7-protocols-2005.09.12.ebuild 1503 RMD160 7a18e7663007a251a5861929daf84b4793ae1812 SHA1 22b5fc1dc6046bbf0ba2d2b7f75e932466cc660f SHA256 c10c94f39096a8d5ed59885691360ba181ae48f2341b8d24955fa54b7a6873d5 size 1503
 MD5 d6e602e170f30478453f4d84b52b116d l7-protocols-2005.09.12.ebuild 1503
+RMD160 7a18e7663007a251a5861929daf84b4793ae1812 l7-protocols-2005.09.12.ebuild 1503
+SHA256 c10c94f39096a8d5ed59885691360ba181ae48f2341b8d24955fa54b7a6873d5 l7-protocols-2005.09.12.ebuild 1503
+EBUILD l7-protocols-2005.12.16.ebuild 1503 RMD160 e664a04234763af719d59298ab896d8cf9674d0a SHA1 80531f54fdc8b26f6b41d2b64e7a8a93c093e42e SHA256 503930205a0bfc8a84b2833c6e7111178052590e01120387d266b81875ce0a67 size 1503
 MD5 4dda68869b921dba798586ad9048f8f1 l7-protocols-2005.12.16.ebuild 1503
+RMD160 e664a04234763af719d59298ab896d8cf9674d0a l7-protocols-2005.12.16.ebuild 1503
+SHA256 503930205a0bfc8a84b2833c6e7111178052590e01120387d266b81875ce0a67 l7-protocols-2005.12.16.ebuild 1503
+EBUILD l7-protocols-2006.04.09.ebuild 1503 RMD160 79a51bdd2319011e75798b3ed9f91404a7cd3e67 SHA1 b15fc643717830078a8fe31628ae2ebc79f9bf1a SHA256 9a0b14e7d453998ff6639365d6cff2f0eb5d3702aa1291aa3b53d020e6d697b8 size 1503
+MD5 11dda7952e900e1c81e7c0bf368ae1ac l7-protocols-2006.04.09.ebuild 1503
+RMD160 79a51bdd2319011e75798b3ed9f91404a7cd3e67 l7-protocols-2006.04.09.ebuild 1503
+SHA256 9a0b14e7d453998ff6639365d6cff2f0eb5d3702aa1291aa3b53d020e6d697b8 l7-protocols-2006.04.09.ebuild 1503
+MISC ChangeLog 4388 RMD160 7980011b188bd9b4a5f21f90526ae6f9e0f9fc8d SHA1 04e8e69e0fa8845a681d97cf3d9b081ee8faefab SHA256 28f9b9170f3ad73ea54e04023cbe42deb326f7bcecac8987846200eb686f1fb6 size 4388
+MD5 e923f11bb010ea3061ed64756412c3c1 ChangeLog 4388
+RMD160 7980011b188bd9b4a5f21f90526ae6f9e0f9fc8d ChangeLog 4388
+SHA256 28f9b9170f3ad73ea54e04023cbe42deb326f7bcecac8987846200eb686f1fb6 ChangeLog 4388
+MISC metadata.xml 374 RMD160 36c7b587b04bba133b9b106083dd7b485d9d2e45 SHA1 1d33c3e413603911ecb01f7a6ac8bb89c544562b SHA256 4638653661df3aa277ddfab4579d87598d17211e8b4d10114d4eeba5ddf2b7f1 size 374
 MD5 89edb769612add8464eb3c324f09e197 metadata.xml 374
+RMD160 36c7b587b04bba133b9b106083dd7b485d9d2e45 metadata.xml 374
+SHA256 4638653661df3aa277ddfab4579d87598d17211e8b4d10114d4eeba5ddf2b7f1 metadata.xml 374
+MD5 b865e8bc99b24b528a6511a02f8fd7f5 files/digest-l7-protocols-2005.09.05 268
+RMD160 349f2350f09e300e45e69d5f0c56478499515996 files/digest-l7-protocols-2005.09.05 268
+SHA256 aa92851e3c37a759a3099bfff0123f834adbd8a090cffc9a0f33cb937ff4929c files/digest-l7-protocols-2005.09.05 268
+size 268 files/digest-l7-protocols-2005.09.05 268
+MD5 b8a9738976b4f802d05d7cd155119417 files/digest-l7-protocols-2005.09.12 268
+RMD160 1d4fb8005f12b2713d88d4a5262b1add36808337 files/digest-l7-protocols-2005.09.12 268
+SHA256 90ac456ce7181fddf8d124012c00102f026d1aee36a88bc7bc6d40e1a3696e57 files/digest-l7-protocols-2005.09.12 268
+size 268 files/digest-l7-protocols-2005.09.12 268
+MD5 fd30315a9cdf9e4e0af7b0bb4a237442 files/digest-l7-protocols-2005.12.16 268
+RMD160 269499dd8807364218c7d633df5ad5dc730b5d6f files/digest-l7-protocols-2005.12.16 268
+SHA256 693bbb9a26f1c6763e777c61ee84fc903c4368e4152a2eddb2b78c9289b8efb6 files/digest-l7-protocols-2005.12.16 268
+size 268 files/digest-l7-protocols-2005.12.16 268
+MD5 f49ac4740d58c2ed90eccdd0eaa70c11 files/digest-l7-protocols-2006.04.09 268
+RMD160 c454b1dd26260ef38396fa39cf6d70298a250619 files/digest-l7-protocols-2006.04.09 268
+SHA256 6b926c3951bb119ac71e2a029ca77ae238a1f73427c0d82ad807268954c5afde files/digest-l7-protocols-2006.04.09 268
+size 268 files/digest-l7-protocols-2006.04.09 268
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2-ecc0.1.6 (GNU/Linux)
+Version: GnuPG v1.4.2.2-ecc0.1.6 (GNU/Linux)
 
-iD8DBQFDvk/BmdTrptrqvGERAuNxAJ4hVfW+di4Qogps3PF/P/j7es6TqACeJYzH
-L1LUcfWHz6W6bDv6CNuYiUQ=
-=dmDu
+iD8DBQFESvT4mdTrptrqvGERAoUAAJ9AYpw/vHdbLIh0piVDztglc7JbVwCcDL+G
+knJWBKEfgQPhun0Bdm9Lv/Q=
+=Ztub
 -----END PGP SIGNATURE-----
