@@ -1,1 +1,3 @@
 MD5 180b9e905d98bf49bcde33f4f280f367 l7-protocols-2005-09-05.tar.gz 85769
+RMD160 3e39be5c5b90971647bc746af37185d1bd2d4981 l7-protocols-2005-09-05.tar.gz 85769
+SHA256 491cebf7aaf7d4abb972b79defe98cfb0221ae51c76f0034b19fd23ee7351c22 l7-protocols-2005-09-05.tar.gz 85769
