@@ -1,1 +1,3 @@
 MD5 16d698f175e395f27b1840c68d44a0b6 l7-protocols-2005-09-12.tar.gz 85980
+RMD160 f8a795b78be23331d601a42743640756218f66da l7-protocols-2005-09-12.tar.gz 85980
+SHA256 8bb2badec1b272fdedb2634fef50c8b81f25a857c2dd42385c23857d0de2f816 l7-protocols-2005-09-12.tar.gz 85980
