@@ -1,1 +1,3 @@
 MD5 7ac8c8e4beb71f95c806a613e19c4f21 l7-protocols-2005-12-16.tar.gz 88335
+RMD160 739e09eb007840917d1118c56f2a59aa11c13805 l7-protocols-2005-12-16.tar.gz 88335
+SHA256 29b2cb700b0507fca7a4b368233690c84d6247184e6ae8d9c5eae4a4b04278ff l7-protocols-2005-12-16.tar.gz 88335
