@@ -1,0 +1,3 @@
+MD5 25dc627a23cfb3c1d269e76cfe2fe1dc l7-protocols-2006-04-09.tar.gz 90208
+RMD160 9d1e7f91380ce1a1721068e464f0349759305ef0 l7-protocols-2006-04-09.tar.gz 90208
+SHA256 20ee22422001dfc2d840c7118eeac5e21cd557a7719f2c46b4cbcee2e16f17e9 l7-protocols-2006-04-09.tar.gz 90208
